# DFGSM2-IA-S2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: mirror-to-gitlab.yml
l2math/: __init__.py  data.py  display.py  visualization.py
project/: X_test.csv  X_train.csv  prepare_data.py  project.ipynb  y_train.csv
session1/: objectif.md  tp0.ipynb  tp1.ipynb  tp1_correction.ipynb  tp2.ipynb
session2/: objectif.md  tp1.ipynb  tp1_correction.ipynb  tp_0_regularization.ipynb
session3/: objectif.md  tp0.ipynb  tp1.ipynb  tp1_correction.ipynb
tex/: clean.sh  header.tex  includes.tex  main.tex  masterinnov_session_1.tex  masterinnov_session_2.tex  masterinnov_session_3.tex  masterinnov_session_4.tex
tex/modules/: bagging.tex  biases.tex  carbon_footprint.tex  cart.tex  data.tex  data_mining.tex  data_viz.tex  genai.tex  introduction.tex  llm.tex  ml.tex  prompt_engineering.tex  python.tex  stats.tex  text_mining.tex
