[project]
name = "dfgsm2-ia-s2"
version = "0.1.0"
description = "Introduction to Machine Learning for Medical Students (DFGSM2)"
authors = [
    {name = "Raphael Cousin",email = "racousin@student.42.fr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=1.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
